Modificaciones de redireccionamiento

--- a/ajax/html/ajax_html.html
+++ b/ajax/html/ajax_html.html
@@ -1,3 +1,3 @@
 <figure>
-	<a href="http://saidw.com"><img src="resources/programacionweb.png" alt=""></a>
+	<a href="http://betancourtyeison.github.io/"><img src="resources/programacionweb.png" alt=""></a>
 </figure>
