Cambio de index.html footer

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<strong>Powered by Yeison Betancourt S.</strong>
 		</p>
 		<p>
-			betancourtyeison.github.io/ 2015
+			betancourtyeison.github.io 2015
 		</p>
 	</footer>
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
